@@ -21,6 +21,7 @@ jastadd {
 	// module specifications
 	modules 'modules'
 
+	println System.properties['jastadd.module']
 	// Target module:
 	// call Gradle with -Djastadd.module="..." to select module to build (default is "java7 backend")
 	// remember to run the 'clean' task if a new target module is specified!
