@@ -117,6 +117,7 @@
 			binary="true" force="false">
 			<!-- we use filelist because the order is important -->
 			<filelist dir="${java4.dir}/scanner">
+				<file name="Header.flex"/>
 				<file name="Preamble.flex"/>
 				<file name="Macros.flex"/>
 				<file name="RulesPreamble.flex"/>
