@@ -14,6 +14,7 @@ module("java4 frontend") {
 	}
 
 	scanner {
+		include "scanner/Header.flex", [-4]
 		include "scanner/Preamble.flex", [-3]
 		include "scanner/Macros.flex", [-2]
 		include "scanner/RulesPreamble.flex", [-1]
