@@ -178,6 +178,7 @@
 			binary="true" force="false">
 			<!-- we use filelist because the order is important -->
 			<filelist dir="${java4.dir}/scanner">
+				<file name="Header.flex"/>
 				<file name="Preamble.flex"/>
 			</filelist>
 			<filelist dir="${java7.dir}/scanner">
