@@ -224,6 +224,9 @@
 		<concat destfile="${tmp.dir}/scanner/OriginalScanner.flex"
 			binary="true" force="false">
 			<!-- we use filelist because the order is important -->
+			<filelist dir="${java4.dir}/scanner">
+				<file name="Header.flex"/>
+			</filelist>
 			<filelist dir="${java8.dir}/scanner">
 				<file name="Preamble.flex"/>
 			</filelist>
