@@ -1,10 +1,3 @@
-package scanner;
-
-import beaver.Symbol;
-import beaver.Scanner;
-import parser.JavaParser.Terminals;
-import java.io.*;
-
 %%
 
 %public
