@@ -3,6 +3,9 @@
     * Isolated header part of java4/parser/Preamble.parser to
     java4/parser/Header.parser. This makes it easier to change the parser
     package and import declarations.
+    * Isolated header part of java4/scanner/Preamble.flex to
+    java4/scanner/Header.flex. This makes it easier to change the scanner
+    package and import declarations.
 
 2015-05-31  Jesper Öqvist <joqvist@google.com>
 
